Resolves: tdf#106732 the intent was surely to return a const ref

Change-Id: Iaaa1f76a689645adaebf4fe5b87003ad238f71f2
(cherry picked from commit a7d008a8dfdc0a8b42061329b5e756b1b034abaf)